# PicoDMZ

./: .gitignore  CMakeLists.txt  README.md
docs/: README.nfc.md  _config.yml  index.md  original_README.md  test_blog.md
docs/_includes/: head-custom.html
docs/_posts/: 2026-05-06-episode01-the-poc.md  2026-05-08-episode02-the-screen.md  2026-05-15-episode03-the-board-i.md
docs/tech/: build.md  display-st7789.md  hardware.md  index.md  limitations.md  nfc.md
docs/tech/old/: rp2040_pinout.md
src/: CMakeLists.txt
src/ext/FatFs_SPI/: CMakeLists.txt
src/ext/FatFs_SPI/src/: rtc.c
src/firmware/: boot_sound_data.c  display_smoke_test.c  main.c  mfrc522.c  mk_st7735.c  mk_st7789.c  nfc_smoke_test.c
src/inc/: boot_sound_data.h  mfrc522.h
